<resources>
    <string name="app_name">Taxi Passenger App</string>

    <string name="profile">Profile</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>

    <string name="login_header">Welcome, Login</string>
    <string name="welcome">Welcome!</string>
    <string name="email_label">Email / Phone Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="no_account">Register new account</string>
    <string name="or_login">Or login with</string>
    <string name="or_sign_up">Or sign up with</string>
    <string name="login_google">Login with Google</string>
    <string name="login_facebook">Login with Facebook</string>


    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cont">Continue</string>
    <string name="email_only">Email</string>
    <string name="phone_number">Phone number</string>

    <string name="login_text">Please select your country code and enter your phone number.</string>
    <string name="login_heading">Enter your phone number</string>
    <string name="phone_error_msg">Enter a valid number</string>

    <string name="verify">Verify</string>
    <string name="please_wait">Please wait..</string>
    <string name="verify_not_robot">Verifying if you are not a robot.. Your browser will open
    shortly to complete this process.
    </string>

    <string name="phone_verify">Phone number verification</string>
    <string name="code_was_sent">A verification code was sent to you via SMS,
        enter the code to verify your number.</string>
    <string name="not_get_code">Resend code?</string>
    <string name="sign_up">Sign Up</string>
    <string name="name_and_surname_signup">Name and surname sign up</string>
    <string name="sign_up_msg">Finally enter your name and surname.</string>

    <string name="taxi_on_map">Taxi location</string>
    <string name="taxi_information">Taxi information</string>
    <string name="driver_information">Driver information</string>

    <string name="travel">Travel</string>
    <string name="fare">Taxi fares</string>
    <string name="message">Messages</string>
    <string name="history">History</string>
    <string name="contacts">Contacts</string>
    <string name="events">Events</string>
    <string name="specials">Specials</string>
    <string name="news">News</string>
    <string name="long_travel">Book</string>
    <string name="jobs">Jobs</string>

    <string name="search">Search</string>


    <string name="personal_details">Personal details</string>
    <string name="contact_details">Contact details</string>
    <string name="logout">Logout</string>


    <string name="events_in">Events in</string>

</resources>