<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    android:padding="20dp"
    tools:context=".RegisterNamesActivity">


    <TextView
        android:id="@+id/signup_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/name_and_surname_signup"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signup_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:text="@string/sign_up_msg"
        android:textAlignment="center"
        android:textColor="@color/low_primary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_heading" />


    <LinearLayout

        android:id="@+id/name_surname_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/signup_msg">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:hint="@string/name"
            android:textColorHint="@color/low_primary_color"
            app:hintTextColor="@color/white"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_signup_vale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:hint="@string/surname"
            android:textColorHint="@color/low_primary_color"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/surname_signup_vale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />


        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/signup_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/corner_radius_4dp"
        android:backgroundTint="@color/white"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/primary_color"
        app:layout_constraintTop_toBottomOf="@id/name_surname_fields" />


</androidx.constraintlayout.widget.ConstraintLayout>