<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    android:padding="20dp"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/login_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/login_heading"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:text="@string/login_text"
        android:textAlignment="center"
        android:textColor="@color/low_primary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_heading" />

    <com.hbb20.CountryCodePicker
        android:id="@+id/country_code_picker_login"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/country_code_picker_shape"
        android:gravity="center"
        app:ccpDialog_showFlag="false"
        app:ccp_arrowColor="@color/white"
        app:ccp_autoDetectCountry="true"
        app:ccp_contentColor="@color/white"
        app:ccp_defaultNameCode="ZA"
        app:ccp_showFlag="false"

        app:ccp_autoFormatNumber="true"

        app:ccp_showFullName="true"
        app:ccp_showNameCode="false"
        app:ccp_textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/login_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_input_login"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:hint="@string/phone_number"
        app:layout_constraintTop_toBottomOf="@id/country_code_picker_login"

        app:hintTextColor="@color/white"
        android:textColorHint="@color/low_primary_color"

        >


        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/phone_input_login_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
android:gravity="bottom"
            android:inputType="phone"

            android:textColor="@color/white"


            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/next_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/country_code_picker_shape"
        android:backgroundTint="@color/white"
        android:text="@string/cont"
        android:textAllCaps="false"
        android:textColor="@color/primary_color"
        app:layout_constraintTop_toBottomOf="@id/phone_input_login"
        tools:layout_editor_absoluteX="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>