<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:background="@color/background_color"
    tools:context=".ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/profile_info"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="8dp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/travel_info"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        app:layout_constraintTop_toTopOf="parent"

                        >

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="32dp"
                            android:layout_height="32dp"

                            android:src="@drawable/account_circle_fill_48px"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/personal_details"
                            android:textColor="@color/text_primary_color"
                            android:layout_marginStart="5dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView2"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:src="@drawable/navigate_next_48px" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/white_smoke"
                            app:layout_constraintBottom_toBottomOf="parent" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/taxi_info"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        app:layout_constraintTop_toBottomOf="@+id/travel_info"

                        >

                        <ImageView
                            android:id="@+id/info_icon"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:src="@drawable/perm_contact_calendar_fill"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/text_primary_color"
                            android:text="@string/contact_details"
                            android:layout_marginStart="5dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/info_icon"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:src="@drawable/navigate_next_48px" />


                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/logout_card"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="8dp"
                app:layout_constraintTop_toBottomOf="@id/profile_info">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">


                    <androidx.constraintlayout.widget.ConstraintLayout

                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"

                        >

                        <ImageView
                            android:id="@+id/logout_icon"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:src="@drawable/logout_48px"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/text_primary_color"
                            android:text="@string/logout"
                            android:layout_marginStart="5dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/logout_icon"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:src="@drawable/navigate_next_48px" />


                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</FrameLayout>